cambios para agregar plugin de camara y almacenar municipio origen, se agrega ndModles

--- a/front/ionic.config.json
+++ b/front/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "caracterizacion",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {},
+    "cordova": {}
   },
   "type": "angular"
 }
