--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@capacitor/core": "^2.4.1",
+    "@ionic-native/base64": "^5.28.0",
     "@ionic-native/camera": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.28.0",
@@ -28,6 +29,7 @@
     "@ionic/angular": "^5.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "com-badrit-base64": "^0.2.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
@@ -81,7 +83,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "com-badrit-base64": {}
     },
     "platforms": [
       "android"
