--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,10 @@
     "@ionic-native/base64": "^5.28.0",
     "@ionic-native/camera": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file-chooser": "^5.28.0",
+    "@ionic-native/file-path": "^5.28.0",
     "@ionic-native/geolocation": "^5.28.0",
+    "@ionic-native/network": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -31,8 +34,12 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "com-badrit-base64": "^0.2.0",
     "cordova-android": "8.1.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-filechooser": "^1.2.0",
+    "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-network-information": "^2.0.2",
     "ionic-selectable": "^4.7.1",
     "ng-focusme": "0.0.2",
     "rxjs": "~6.5.5",
@@ -84,10 +91,14 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "com-badrit-base64": {}
+      "com-badrit-base64": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
