--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,8 @@
     "@ionic-native/geolocation": "^5.28.0",
     "@ionic-native/network": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/sqlite": "^5.28.0",
+    "@ionic-native/sqlite-porter": "^5.28.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ngx-translate/core": "^13.0.0",
@@ -40,10 +42,12 @@
     "cordova-plugin-filechooser": "^1.2.0",
     "cordova-plugin-filepath": "^1.5.8",
     "cordova-plugin-network-information": "^2.0.2",
+    "cordova-sqlite-storage": "^5.1.0",
     "ionic-selectable": "^4.7.1",
     "ng-focusme": "0.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -94,7 +98,9 @@
       "com-badrit-base64": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-filechooser": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-sqlite-storage": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {}
     },
     "platforms": [
       "android",
