--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "@capacitor/core": "^2.4.1",
+    "@capacitor/android": "^2.4.2",
+    "@capacitor/core": "^2.4.2",
     "@ionic-native/base64": "^5.28.0",
     "@ionic-native/camera": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
@@ -56,7 +57,7 @@
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
-    "@capacitor/cli": "^2.4.1",
+    "@capacitor/cli": "^2.4.2",
     "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
