cambios para que compile a android 10 y cambio en ruta

--- a/front/android/app/src/main/assets/capacitor.config.json
+++ b/front/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "Caracterización linkers",
+  "appName": "Caracterizacion",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
