--- a/front/android/app/capacitor.build.gradle
+++ b/front/android/app/capacitor.build.gradle
@@ -11,6 +11,9 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
 
     implementation "com.android.support:support-v4:27.+"
+    implementation "com.android.support:appcompat-v7:26+"
+    implementation "com.soundcloud.android:android-crop:1.0.0@aar"
+    implementation "com.android.support:appcompat-v7:27.+"
 }
 
 
