--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "resources": "capacitor-resources -p android,ios"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +36,7 @@
     "@ionic/angular": "^5.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "capacitor-resources": "^2.0.5",
     "com-badrit-base64": "^0.2.0",
     "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
